# data-agent-sample

./: .env  .env.template  finsage-agent.py  main.py  pyproject.toml
apps/finsage-agent/: .env.template  Dockerfile  main.py  pyproject.toml
apps/finsage-agent/deploy/: containerapp.bicep
apps/finsage-agent/scripts/: setup_local.ps1
apps/finsage-agent/src/api/: app.py
apps/finsage-agent/src/api/routes/: agent.py
apps/finsage-agent/src/application/: agent_runner.py
apps/finsage-agent/src/infrastructure/: config.py  fabric_adapter.py
apps/finsage-agent/src/prompts/: system.py
apps/finsage-agent/src/telemetry/: events.py
apps/finsage-agent/src/tools/: fabric_tool.py
apps/trucking-agent/: .env.template  .gitignore  README.md  main.py
apps/trucking-agent/doc/: security.md
apps/trucking-agent/src/api/: app.py
apps/trucking-agent/src/api/routes/: agent.py  health.py
apps/trucking-agent/src/application/: agent_runner.py
apps/trucking-agent/src/domain/: models.py
apps/trucking-agent/src/infrastructure/: config.py  fabric_adapter.py  fabric_openai_adapter.py  fabric_rpc_adapter.py  identity.py
apps/trucking-agent/src/prompts/: system.py
apps/trucking-agent/src/tools/: fabric_data_agent_http_tool.py  fabric_data_agent_rpc_tool.py  fabric_tool.py
